--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,7 @@ nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    margin: 0 200px;
     
     
 }
@@ -39,5 +40,16 @@ nav a{
     font-weight: 700;
     color: white;
     padding:15px 35px ;
+}
+.header{
+    background: #FFF8F3;
+}
+.banner{
+    padding: 30px 30px  30px 150px;
+    display: flex;
+    align-items: center;
+}
+.banner .p-pic{
+    width: 500px;
 
 }
