--- a/styles.css
+++ b/styles.css
@@ -76,6 +76,10 @@ nav a{
 
 }
 /* main sec style */
+main{
+    max-width: 1140px;
+    margin: 0 auto;
+}
 .about{
     padding: 130px;
     border-radius: 10px;
@@ -92,4 +96,11 @@ nav a{
     color: #757575;
     text-align: center;
     font-size: 18px;
+}
+.about-info-con{
+    display: flex;
+    justify-content: space-around;
+}
+.about-info{
+    text-align: center;
 }
