--- a/styles.css
+++ b/styles.css
@@ -107,3 +107,25 @@ main{
 #what{
     padding: 30px 150px;
 }
+.skill-con{
+    display: flex;
+    gap: 24px;
+}
+.skill{
+    padding: 30px;
+    border-radius: 5px;
+    background: #FFF;
+    box-shadow: 0px 6px 50px 0px rgba(0, 0,0, 0.06);
+    
+}
+.skill-des{
+    pas
+}
+main{
+    margin-top: 130px ;
+}
+.resu-col-title{
+    color: #474747;
+    font-size: 30px;
+    font-weight: 700;
+}
